Add email to contact info

--- a/_posts/2019-05-18-Alpha-1.1-and-site-updates.md
+++ b/_posts/2019-05-18-Alpha-1.1-and-site-updates.md
@@ -3,15 +3,12 @@ layout: post
 title: Alpha 1.1
 ---
 
-# Alpha 1.1
-18 May 2019
-
 ## Changelog
 
 ### Changes
 
 * Optimized audio and textures to reduce overall size and improve intial load times
-* The Game Speed controls animated faster
+* The Game Speed controls animate faster
 
 ### Fixes
 
