task to update all posts to use standardize new template

--- a/_posts/2019-05-18-Alpha-1.1-and-site-updates.md
+++ b/_posts/2019-05-18-Alpha-1.1-and-site-updates.md
@@ -2,6 +2,7 @@
 layout: post
 title: Alpha 1.1
 tags: release
+comments: on
 ---
 
 ## Changelog
@@ -22,10 +23,6 @@ tags: release
 I moved the download links to the navigation and touched things up a bit. You can always find the latest builds there.
 
 Thanks for playing!
-
--FealtyDev
-
-![FealtyDevPortrait](/public/images/fealtydevportrait.jpeg){: .portrait }
 
 ---
 
