--- a/_posts/2019-05-23-Alpha-1.2.md
+++ b/_posts/2019-05-23-Alpha-1.2.md
@@ -2,6 +2,7 @@
 layout: post
 title: Alpha 1.2
 tags: release
+comments: on
 ---
 
 ## Changelog
@@ -33,10 +34,6 @@ tags: release
 ---
 
 Live mode makes a big deal. Let me know if you find any wonkiness,
-
--FealtyDev
-
-![FealtyDevPortrait](/public/images/fealtydevportrait.jpeg){: .portrait }
 
 ---
 
