--- a/_posts/2019-09-16-devblog-1.md
+++ b/_posts/2019-09-16-devblog-1.md
@@ -2,6 +2,7 @@
 layout: post
 title: Devblog-1
 tags: devblog
+comments: on
 ---
 
 Welcome to the first Fealty Devblog.
@@ -33,6 +34,4 @@ I got started on the tech for the portrait system on Saturday and it is almost d
 
 By next week I should have some screenshots to share of the new portraits, so stay tuned.
 
--FealtyDev
-
-![FealtyDevPortrait](/public/images/fealtydevportrait.jpeg){: .portrait }
+---
