task to add excerpt tag to existing posts

--- a/_posts/2019-05-18-Alpha-1.1-and-site-updates.md
+++ b/_posts/2019-05-18-Alpha-1.1-and-site-updates.md
@@ -11,7 +11,7 @@ comments: on
 
 * Optimized audio and textures to reduce overall size and improve intial load times
 * The Game Speed controls animate faster
-
+<!--more-->
 ### Fixes
 
 * Fixed a few crashes around UI
