--- a/_posts/2019-05-23-Alpha-1.2.md
+++ b/_posts/2019-05-23-Alpha-1.2.md
@@ -15,7 +15,7 @@ comments: on
 * Characters will emote as they begin and complete actions (WIP)
 * Option to enable/disable the Advisor and the Tutorial
 * Added basic account management functionality (still using the fake local server)
-
+<!--more-->
 ### Changes
 
 * **Simulation Changes**
