--- a/_posts/2019-06-28-1.3-Character-action-choices.md
+++ b/_posts/2019-06-28-1.3-Character-action-choices.md
@@ -5,7 +5,7 @@ tags: design
 comments: on
 ---
 
-Last time I talked about the underlying [changes to the simulation] and specifically how that impacted the implementation of the **Move Character** action. Those changes had more widespread effects, and today I am going to explain the **Character Action Choices** feature.
+Last time I talked about the underlying [changes to the simulation] and specifically how that impacted the implementation of the **Move Character** action. Those changes had more widespread effects, and today I am going to explain the **Character Action Choices** feature.<!--more-->
 
 ## Overview
 
