--- a/_posts/2019-09-16-devblog-1.md
+++ b/_posts/2019-09-16-devblog-1.md
@@ -7,7 +7,7 @@ comments: on
 
 Welcome to the first Fealty Devblog.
 
-Initially I did not intend to write Devblogs *perse*, and I did not have a regular posting time. Instead I would wait for an interesting topic to pop into my head and then bash around ideas and drafts until I got something I thought was worthwhile.
+Initially I did not intend to write Devblogs *perse*, and I did not have a regular posting time. Instead I would wait for an interesting topic to pop into my head and then bash around ideas and drafts until I got something I thought was worthwhile.<!--more-->
 
 What I learned was that choosing between multiple options is hard, and then in the angst of trying to pick a topic nothing would get written. In other times, I simply didn't have a big enough topic to write about - because many *small* things were happening - and that was tough as well.
 
