--- a/_drafts/2019-10-30-devblog-4.md
+++ b/_drafts/2019-10-30-devblog-4.md
@@ -9,7 +9,7 @@ Where does the time go?
 
 Like I promised some time ago, this post will be about the core military units in Fealty and their function. However, before we get into that here is a brief announcement:
 
-    The game is moving closer towards the release of 1.4.0. I still have some UI pieces and text strings to improve ( a lot actually ) before then, but the release is feature complete at this point. 
+    The game is moving closer towards the release of 1.4 I still have some UI pieces and text strings to improve ( a lot actually ) before then, but the release is feature complete at this point. 
 
     I made a special "**playtest**" build that I would like to get feedback on so I can roll-up any more changes for the release build.
 
@@ -24,6 +24,40 @@ Like I promised some time ago, this post will be about the core military units i
 Moving on!
 
 ---
+
+## Unit Overview
+
+Military units are one of the headliner features for 1.4 Troops in 1.0 were attached to a character directly and enabled that character to perform military actions. Military units are now a separate concept within the game which will give me far greater flexibility to expand the design in the future.
+
+### Food
+
+One big change in 1.4 is that settlement population no longer consumes Food (they can take care of themselves) but units still do. The morale of a military unit without food will deteriorate.
+
+### Types of Units
+
+There are two types of units in 1.4:
+
+**Serf Levy**: Levy units are created from the Serf population of the settlement. Serfs in units cannot performing other work, like farming or construction. Levy units are going to be weaker than professional troops, and are only available for a term of 45 days. If a levy is not disbanded once the term is up, the settlement from which that levy was created will begin to experience rising unrest. The Serfs have lives to get back to!
+
+You can extend the term of service for a levy, which will have a short-term negative effect on the morale of the unit. Extending a levy's term multiple times will have serious unrest and morale penalties.
+
+**Mercenary Company**: If you need tougher troops, or troops that will be available for a longer period of time, then you can create a mercenary company. Recruiting mercenaries will not affect the workforce of the settlement and mercenaries do not have the same impact on settlement unrest as levies do. Mercenaries, however, like to get paid. If you leave your mecenaries unpaid for too long they will begin to desert.
+
+Another caveat about mercenaries is that the number available for recruitment in your settlement is dependent on the number of taverns there. 
+
+### Raids
+
+Military units can be sent to raid the settlements of other families. A raid succesful raid will kill enemy troops, and destroy their crops and buildings. If a unit raids a defenseless settlement then that settlement will be taken over without a fight.
+
+### Garrisons
+
+A unit that is in a friendly settlement will act as it's garrison and attempt to respond to enemy raids. In the case of a settlement where there is not a military unit, but there is a friendly character, that character will attempt to rally the people of the settlement to defend it.
+
+A settlement without any character to lead the defense will be taken over without a struggle.
+
+## Gameplay
+
+What type of military units you can create is going to be dictated by the economy of your settlements. If you have many cottages and Serfs you will be able to recruit large Levy units without any cost. But if you focus on a strong trade economy (and taverns), you will have strong mercenary companies at your disposal. Mercenaries therefore require a more advanced economy than Levies.
 
 ---
 
