images and WIP text

--- a/_posts/2019-05-23-Alpha-1.2.md
+++ b/_posts/2019-05-23-Alpha-1.2.md
@@ -33,14 +33,6 @@ comments: on
 
 ---
 
-Live mode makes a big deal. Let me know if you find any wonkiness,
+Live mode makes a big deal. Let me know if you find any wonkiness.
 
 ---
-
-[alpha1-zoomedout]: /public/images/posts/16MAY19/alpha1-zoomedout.jpg
-[alpha1-settlement]: /public/images/posts/16MAY19/alpha1-settlement.jpg
-[alpha1-building]: /public/images/posts/16MAY19/alpha1-building.jpg
-[alpha1-character]: /public/images/posts/16MAY19/alpha1-character.jpg
-[alpha1-transfer]: /public/images/posts/16MAY19/alpha1-transfer.jpg
-[alpha1-moving]: /public/images/posts/16MAY19/alpha1-moving.jpg
-[alpha1-rankings]: /public/images/posts/16MAY19/alpha1-rankings.jpg
