--- a/_drafts/2019-10-30-devblog-4.md
+++ b/_drafts/2019-10-30-devblog-4.md
@@ -1,27 +1,15 @@
 ---
 layout: post
-title: Devblog-4
-tags: devblog
+title: Military Companies
+tags: design
 comments: on
 ---
 
-Where does the time go?
+*First off, thank you to everyone who helped in the playtest. I cannot emphasize how much extra eyes, hands and ears matter. Thank you!*
 
-Like I promised some time ago, this post will be about the core military units in Fealty and their function. However, before we get into that here is a brief announcement:
+--
 
-    The game is moving closer towards the release of 1.4 I still have some UI pieces and text strings to improve ( a lot actually ) before then, but the release is feature complete at this point. 
-
-    I made a special "**playtest**" build that I would like to get feedback on so I can roll-up any more changes for the release build.
-
-    I am specifically looking for feedback around numbers
-
-    * population growth
-    * building construction times
-    * etc
-
-    Thank you for your help!
-
-Moving on!
+Today I want to tell you about **Companies**, the core military unit in Fealty, and how they fit into the grander scheme of things.
 
 ---
 
@@ -64,3 +52,8 @@ What type of military units you can create is going to be dictated by the econom
 ---
 
 [architecture for the game]: {{ site.baseurl }}{% link _posts/2019-04-8-Fealty-Code-Architecture.md%}
+[**levy**]: /public/images/posts/1NOV19/levy-image.png
+[merc]: /public/images/posts/1NOV19/merc-image.png
+[train]: /public/images/posts/1NOV19/train-image.png
+[reinforce]: /public/images/posts/1NOV19/reinforce-image.png
+[stats]: /public/images/posts/1NOV19/stats-image.png
