--- a/_posts/2019-11-14-devblog-4.md
+++ b/_posts/2019-11-14-devblog-4.md
@@ -1,99 +1,116 @@
 ---
 layout: post
-title: Devblog-3
+title: Devblog-4
 tags: devblog
 comments: on
 ---
 
-Last week I did the following, in order:
 
-1. Finished the Family Tree UI
-2. Had a son IRL
-3. Opinion system
-4. Vassals
-5. Messages
-6. Companies, Raids & Garrisons
+Hello people of the world!
 
-If you consider that I mostly work on this a few hours at night (these posts get worked on during lunch breaks) this is quite a bit of stuff actually. Today I want to talk briefly about each of these, and then go into how I was able to add four significant systems in a short amount of time.<!--more-->
+And hello to Itch.io! This is the first post on here, and I am excited. Itch has some great features to make getting the game out there easier, and I am looking forward to making use of what the platform offers as the game grows.
+
+I have some great news:
+
+## I Played For 15 Minutes And It Didn't Crash
+
+<!--more-->
+Furthermore, the game is in an eminently more playable state. I cannot tell you how legit I feel. In a haze of effort and dedication, it feels like what you will soon be able to play has come together in the last few weeks.
+
+If you saw my posts on twitter recently and noticed I was reminiscing over previous prototypes then now you know why - its been a long journey, with much more to go, but I am getting a real taste now!
+
+That is not to say that there are not issues. Most glaring is that game windows don't come forward when they are focused so you have to shuffle them around - other than that the new window system is sweet.
+
+  The other noticeable issue is that some buttons are sort of....
+  ![alt text](https://img.itch.zone/aW1nLzI2ODQ0NzAuanBn/original/m3AxcJ.jpg "poor button")
+  ...discombobulated...
+
+Lastly, the focus for this release has been stuff that is not settlement related because the next release is going going to do to settlements what this release did to the characters and companies - a full rework - so I am loath to waste any time cleaning that stuff up.
+
+The other caveat about the game is that there is no AI.
+
+Ok, so what all is going in 0.1.4 then?
+
+## NEW
+
+- ### VICTORY
+  
+You win the game if you control 65% of the settlements, or are the last family standing. Then you can play again with the same family. How high of a prestige can you get before your family line runs out?
+
+- ### HOME SCREEN
+  
+Since you can win the game, I had to add a screen for when you are between games. Its rather simple now, but at least its consistent in presentation. (This has actually been in the game, but I am sure no one saw it. It has purple, pink and orange squares for panels)
+
+This screen shows you the state of your family, a summary of past games, *a sneak peak at future feature*, and the button to play a new game. If you get to this screen, share me your screenshot please!
+
+- ### FAMILIES
+  
+Characters belong to families now. Each family identifies with a settlement on the map, and proudly bears their own Coat of Arms
+
+Characters can be realted as children/parents, full/half-siblings, and everything else of course.
+![alt text](https://img.itch.zone/aW1nLzI2ODQ1MDAucG5n/original/Rr86D4.png "family tree")
+
+You can see the family tree of a family by tapping their Coat of Arms (most of them)
+
+- ### COMPANIES
+  
+Characters can Recruit new companies of troops to raid and protect settlements.
+Companies need Food or their morale will decrease.
+
+Companies can be one of two types:
+
+  **LEVIES**
+These are the Serfs of your settlement fulfilling their feudal duty to you (their lord). Levies do not require Coin, but having too many may deprive you of the Farmers you need for planting and harvesting. Also, Levy service is only short term. Levies that are not disbanded before 45 days will cause unrest in their settlement. You can extend the term of the Levy to prevent this, but the morale of the company is negatively affected.
+
+  **MERCENARIES**
+Mercenaries are available from Taverns, and will stick around as long as they are looked after. Mercenaries need to be paid on a regular basis. Alternatively, if the company raids a settlement and is succesful the Mercenaries will "pay themselves"
+
+An idle company can Train to improve its effectiveness, and Reinforce to add new toops to the unit. Troops also improve in skill from participating in combat.
+
+- ### DELIVER FOOD
+  
+You can order one of your characters to move food from one settlement to another. Its the little things - you know, so that people don't starve.
+
+- ### TAVERNS
+  
+You can now build Taverns in your settlement. The workers in the Tavern will attract Mercenaries daily. More Taverns means more mercenaries on a regular basis, and a greater number of mercenaries that can be ready and waiting in your settlement.
+![alt text](https://img.itch.zone/aW1nLzI2ODQ1MTAucG5n/original/9lXuxi.png "some buildings")
+
+- ### RAIDS
+  
+Raids destroy crops and possibly buildings. Any companies in a settlement that is being raided will respond to defend it. If there arent any companies, a character present will rally the citizens in a last ditch effort to drive off the attackers.
+
+If there isn't a character to lead the defense, then the settlement is taken over. Glory to the victor!
+![alt text](https://img.itch.zone/aW1nLzI2ODQ1MDEucG5n/original/Xw7WvU.png "raiding party")
+
+## CHANGED
+
+- ### PORTRAITS
+  
+Characters now have a randomly generate portrait instead of the old preset images. Characters that are related tend to reflect that, and I am really proud of how that turned out.
+
+When a character appears on the map, their appearance will match their portrait.
+
+- ### UI OVERHAUL
+  
+Refresh of the UI, cleaned up textures and icons.
+And a million other details. Safety goggles no longer required for viewing!
+![alt text](https://img.itch.zone/aW1nLzI2ODQ1MTEucG5n/original/1I%2Bbjj.png "new ui")
+
+## REMOVED
+
+- A lot of the old commands, like Attack, Annex and Siege are gone. They will be back later, but I wanted to hone in on getting Raids right before adding more interactions. AND, battles and sieges requires Armies, not just puny little companies.
+
+## OTHER COOL STUFF
+
+- Automated deployment to Itch.io - woot!
+- Added update notifications to the game with a link to the new version
+- In general, just vast improvements to the systems in the game, both UI and the simulation, that are going to make things easier to do moving forward, less bug prone, and more flexible
 
 ---
 
-The family tree UI shows you three generations around a particular character: parents, siblings, and offspring. You will be able to open it for any character you know about, and can click through the characters in the family tree to explore other branches or generations. The work here was mostly creating the layout for the portrait widget I finished last week. I also added some decorations to the portrait widget to show if a character is a family leader or heir, or dead.
+Wow, did you read all that? Awesome, thanks!
 
----
+So grab the dev build if you want, or check back tomorrow when I do the proper release with the UI issues (hopeuflly) fixed!
 
-The opinion system tracks the relationship between two characters and is very simple. An opinion value can range from -100 to 100. At first I was going to create data that would track this value between every character in the game. This would do the trick, but offered no way to know more about the value. Instead I implemented a system that tracks the changes to opinion between characters and then calculate the opinion value dynamically.
-
-The base opinion value between characters is zero. This is represented by there not being any **OpinionModifiers**. As actions unfold in the game simulation events can generate **OpinionModifiers** that specifies the characters involved, the value of the modifier, a reference to the **action** that generated it, and an expiration date. When and how significant these modifiers are is determined by the data the designers put into the game.
-
----
-
-The vassal system operates very similarly to the opinion system in that a **Vassal** record is created when there is a relationship between two characters. I defined two types of vassals you can have:
-
-1. Personal - these are the folks you support financial who protect you, follow you around, and can act on your behalf
-2. Landed - these are other lords, with their own lands, who can owe you service of the following kinds:
-   * Harvest tax - a tax in kind on resources collected twice a year in the harvest
-   * Trade tax - a Coin tax the amount of trade in the vassal's settlement
-   * War tax - a special Coin tax
-   * Military service - the vassal can show up in person, or send another commander, with a company of troops
-
-At the moment you can offer and accept entering into a vassal relationship but the landed vassal interactions will come later.
-
----
-
-In order to ask/threaten someone to become your vassal you need to be able to communicate with them, right? There are going to be other ways to do this later, but in 2.0 you are able to compose messages and then command a character to deliver it for you. The different messages in the game right now are:
-
-* Insult
-* Praise
-* Gift (Coin)
-* Bend the knee
-* Offer vassalage
-
-Its obvious what these are - the very basic things needed to modify opinions and start building your feudal empire! I am debating with wether messengers can/should get waylaid and messages read by others - but for now they are safe.
-
-I also think a signal fire system that would support a few basic messages would be cool.
-
----
-
-The military functions in Fealty fall into two camps broadly speaking - war and non-war. Things like armies (big groups of units), battles, sieges and conquest is coming later. For now the focus is on the non-war which is mostly focused on **Raids**.
-
-Raids are low-scale actions performed by small number of troops that primarily performs economic damage. Raids are important because they are a way to both gain resources, deny resources to another character, and slow their economy by damaging their structures. Besides the economic impact, raiding is also a way to subdue another character who needs convincing to bend the knee. If you are able to impair a lord's economy significantly it can have repercussions in your negotiations. Or they might just grow to hate you and never ever forget. In this way raids are as much a political tool as a strategic one.
-
-The basic military unit in 2.0 is the **Company**. A company is a single group of soldiers under the command of a character. (You will be able to equip them later) A company can be of two types:
-
-1. Mercenaries - professionals recruited with coin and who "reward themselves" from plundering
-2. Levies - serfs conscripted into service for a specified duration of time
-
-Mercenary companies cost money, while levies are free. But levies come from your working population and also can't be kept under arms for very long.
-
-Garrisons are military units idle in a settlement. Beside being idle in Garrison, and moving to a different friendly settlement, you can command a company to perform a raid - but thats it. Companies do not move around on their own (armies will - later). As a result of this I am removing the supply component from companies - they will eat from the food in the settlement, and they are only away from it briefly.
-
----
-
-So, how was I able to jam all these things so quickly?
-
-Firstly, the because architecture does a good job of keeping these systems separate I can add a lot of functionality in just a few classes. In the post about the [architecture for the game], I described how the game loop works - briefly:
-
-1. Player (or AI - they are players too) does something pushes a button which creates a **Command** to the game
-2. The **Command** is sent to the server who validates it and tells the local game wether to apply it or not
-3. The Command is executed and it generates **StateChanges** that are applied to the game simulation
-
-Everything in the game works this way. The key parts of the architecture is that the logic for Commands and StateChanges are contained within themselves and are referenced through polymorphic interfaces. The longest part about implementing a new command is figuring out what kinds of StateChanges it needs to kick off. Each type of StateChange is represented by a class in the code so I try to write them in a way that will enable them to be re-used from a design perspective it as much as possible.
-
-The pseudo code for a character reading the insult you sent them would look like:
-
-(Each item is a StateChange)
-
-* Mark the message as READ
-* Generate an OpinionModifier record from the insulted character to the insultee
-* Possible generated a StateChange that triggers a message response being sent back
-
-The second reason is that where a lot of these things *do* start to come together is the UI and I am saving that for when the major systems are in.
-
----
-
-I am both not/looking forward to finishing up the tech and moving to UI. Like so many backend developers it is not my forte - but I know that it is important to get that right for people to be able to enjoy the game. For Alpha 2 I am going to drastically simply things while attempting to improve usability - but more on that later.
-
-Thanks for reading. You can find more information about what I am working on on the Trello Roadmap.
-
-[architecture for the game]: {{ site.baseurl }}{% link _posts/2019-04-8-Fealty-Code-Architecture.md%}
+![alt text](https://img.itch.zone/aW1nLzI2ODQ1MTYucG5n/original/yEPpKP.png "game shot")
