add the itch io widget and fix up post 4

--- a/_posts/2019-11-14-devblog-4.md
+++ b/_posts/2019-11-14-devblog-4.md
@@ -8,7 +8,7 @@ comments: on
 
 Hello people of the world!
 
-And hello to Itch.io! This is the first post on here, and I am excited. Itch has some great features to make getting the game out there easier, and I am looking forward to making use of what the platform offers as the game grows.
+I have created a page on [Itch.io](https://fealtydev.itch.io/fealty) where I am going to put the game files. Itch has some great features to make getting the game out there easier, and I am looking forward to making use of what the platform offers as the game grows. On to the business...
 
 I have some great news:
 
