--- a/_posts/2019-11-15-Alpha-0.1.4-release.md
+++ b/_posts/2019-11-15-Alpha-0.1.4-release.md
@@ -5,9 +5,9 @@ tags: release
 comments: on
 ---
 
-## The first big update of Fealty is here!
+## The first big update of Fealty is here
 
-The last time I made a [stink about a release](alpha-1-release) was a little over 6 months ago and, frankly, the game was admittedly horrible. Actually, it was unplayable. But it existed.
+The last time I made a [stink about a release]({{ site.baseurl }}{% link _posts/2019-05-16-Alpha-1-release.md%}) was a little over 6 months ago and, frankly, the game was admittedly horrible. Actually, it was unplayable. But it existed.
 
 This fact was very important (to me!) because I had just rebooted the project after learning some hard lessons. Getting back to something that was at least recognizably a game was important for my self confidence.
 <!--more-->
@@ -15,13 +15,8 @@ Since that release the idea of Fealty has continued to form and crystalize. A lo
 
 Today I am happy and proud of releasing 0.1.4 to you. I think this version has started to capture what I am trying to do, and I hope that speaks to you.
 
-I wrote many words already about [all the things](1.4-details) that went into this release if you are interested.
+I wrote many words already about [all the things]({{ site.baseurl }}{% link _posts/2019-11-14-devblog-4.md%}) that went into this release if you are interested.
 
 Otherwise, please check out the build for your favorite device(s) from [the hot & new itch.io](https://fealtydev.itch.io/fealty).
 
 Let me know what you think!
-
----
-
-[alpha-1-release]: {{ site.baseurl }}{% link _posts/2019-05-16-Alpha-1-release.md%}
-[1.4-details]: {{ site.baseurl }}{% link _posts/2019-11-14-devblog-4.md%}
